Hack fix for scrollbar styling in Combobox (#376)
<!-- Describe your PR here. -->



<!--
  The following applies to third-party contributors.
  Convex employees and contractors can delete or ignore.
-->

----

By submitting this pull request, I confirm that you can use, modify,
copy, and redistribute this contribution, under the terms of your
choice.

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -14,6 +14,11 @@ body {
   width: 100%;
 }
 
+/* Temporary fix to make scrollbars look right in the production build */
+* {
+  scrollbar-width: thin !important;
+} 
+
 :root {
   --gradient-opacity: 0.8;
   --primary-color: rgba(158, 117, 240, var(--gradient-opacity));
